--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seja Bem Vindo!</title>
      <!-- scripts -->
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+     <script type="text/javascript" src="assets/js/jquery-3.5.1.min.js"></script>
     <!-- Link css -->
     <link rel="stylesheet" href="assets/css/navegacao.css">
     <link rel="stylesheet" href="assets/css/container-inicio.css">
