--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/container-projetos.css">
     <link rel="stylesheet" href="assets/css/container-habilidades.css">
     <link rel="stylesheet" href="assets/css/container-footer.css">
-    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/reset.min.css">
     <link rel="icon" type="image/x-icon" href="/assets/image/foto-animada.png" />
 
