--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="icon" type="image/x-icon" href="/assets/image/foto-animada.png" />
 
 </head>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
 <body>
     <header class="header-container">
