--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <span style="display: inline; font-size: 40pt;" class="meu-nome">Juan Felipe.</span>
                     <br />
                     <!-- Desenvolvedor Full Stack -->
-                    E seja muito bem vindo ao <br>
-                    meu portifólio.
+                    <span class="txt-apresentacao"> seja muito bem vindo ao <br>
+                    meu portifólio.</span>
                   </p>
         
               </div>            
