--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
               </div>            
 
             <div class="redes">
-                <button class="linkedin"><a href="https://www.linkedin.com/in/juan-felipe-a85b05208/">Linkedin</a></button>
-                <button class="linkedin"><a href="https://github.com/felipejuan5">GitHub</a></button>
+                <button class="linkedin"><a href="https://www.linkedin.com/in/juan-felipe-a85b05208/" target="_blank">Linkedin</a></button>
+                <button class="linkedin"><a href="https://github.com/felipejuan5" target="_blank">GitHub</a></button>
             </div>
 
             <div class="container-foto">
